// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tabs/demo/basic.md correctly 1`] = `
<div>
  <div
    class="am-tabs am-tabs-top"
  >
    <div
      class="am-tabs-bar"
      role="tablist"
      tabindex="0"
    >
      <div
        class="am-tabs-ink-bar am-tabs-ink-bar-animated"
      />
      <div
        aria-disabled="false"
        aria-selected="false"
        class=" am-tabs-tab"
        role="tab"
      >
        <span
          class="am-badge"
        >
          First Tab
          <sup
            class="am-badge-text"
          >
            3
          </sup>
        </span>
      </div>
      <div
        aria-disabled="false"
        aria-selected="true"
        class="am-tabs-tab-active am-tabs-tab"
        role="tab"
      >
        <span
          class="am-badge"
        >
          Second Tab
          <sup
            class="am-badge-text"
          >
            今日(20)
          </sup>
        </span>
      </div>
      <div
        aria-disabled="false"
        aria-selected="false"
        class=" am-tabs-tab"
        role="tab"
      >
        <span
          class="am-badge"
        >
          Third Tab
          <sup
            class="am-badge-dot"
          />
        </span>
      </div>
    </div>
    <div
      class="am-tabs-content am-tabs-content-animated"
      style="transform:translateX(-100%) translateZ(0);-webkit-transform:translateX(-100%) translateZ(0);-moz-transform:translateX(-100%) translateZ(0);"
    >
      <div
        aria-hidden="true"
        class="am-tabs-tabpane am-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="false"
        class="am-tabs-tabpane am-tabs-tabpane-active"
        role="tabpanel"
      >
        <div
          style="display:flex;align-items:center;justify-content:center;height:250px;background-color:#fff;"
        >
          Content of Second Tab
        </div>
      </div>
      <div
        aria-hidden="true"
        class="am-tabs-tabpane am-tabs-tabpane-inactive"
        role="tabpanel"
      />
    </div>
  </div>
  <div
    class="am-whitespace am-whitespace-md"
  />
</div>
`;

exports[`renders ./components/tabs/demo/mutlitabs.md correctly 1`] = `
<div>
  <div
    class="am-tabs am-tabs-top"
  >
    <div
      class="am-tabs-bar"
      role="tablist"
      tabindex="0"
    >
      <div
        class="am-tabs-nav-container am-tabs-nav-swipe-container am-tabs-prevpage am-tabs-nextpage"
      >
        <div
          class="am-tabs-nav-wrap"
        >
          <div
            class="am-tabs-nav-swipe"
          >
            <div
              class="am-tabs-nav"
            >
              <div
                class="am-tabs-ink-bar am-tabs-ink-bar-animated"
              />
              <div
                aria-disabled="false"
                aria-selected="false"
                class="am-tabs-tab"
                role="tab"
                style="-webkit-flex-basis:20%;flex-basis:20%;"
              >
                Option0
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="am-tabs-tab"
                role="tab"
                style="-webkit-flex-basis:20%;flex-basis:20%;"
              >
                Option1
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="am-tabs-tab"
                role="tab"
                style="-webkit-flex-basis:20%;flex-basis:20%;"
              >
                Option2
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="am-tabs-tab"
                role="tab"
                style="-webkit-flex-basis:20%;flex-basis:20%;"
              >
                Option3
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="am-tabs-tab"
                role="tab"
                style="-webkit-flex-basis:20%;flex-basis:20%;"
              >
                Option4
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="am-tabs-tab"
                role="tab"
                style="-webkit-flex-basis:20%;flex-basis:20%;"
              >
                Option5
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="am-tabs-tab"
                role="tab"
                style="-webkit-flex-basis:20%;flex-basis:20%;"
              >
                Option6
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="am-tabs-tab"
                role="tab"
                style="-webkit-flex-basis:20%;flex-basis:20%;"
              >
                Option7
              </div>
              <div
                aria-disabled="false"
                aria-selected="true"
                class="am-tabs-tab am-tabs-tab-active"
                role="tab"
                style="-webkit-flex-basis:20%;flex-basis:20%;"
              >
                Option8
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="am-tabs-tab"
                role="tab"
                style="-webkit-flex-basis:20%;flex-basis:20%;"
              >
                Option9
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="am-tabs-tab"
                role="tab"
                style="-webkit-flex-basis:20%;flex-basis:20%;"
              >
                Option10
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="am-tabs-tab"
                role="tab"
                style="-webkit-flex-basis:20%;flex-basis:20%;"
              >
                Option11
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="am-tabs-content am-tabs-content-animated"
      style="transform:translateX(-800%) translateZ(0);-webkit-transform:translateX(-800%) translateZ(0);-moz-transform:translateX(-800%) translateZ(0);"
    >
      <div
        aria-hidden="true"
        class="am-tabs-tabpane am-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="am-tabs-tabpane am-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="am-tabs-tabpane am-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="am-tabs-tabpane am-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="am-tabs-tabpane am-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="am-tabs-tabpane am-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="am-tabs-tabpane am-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="am-tabs-tabpane am-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="false"
        class="am-tabs-tabpane am-tabs-tabpane-active"
        role="tabpanel"
      >
        <div
          style="display:flex;align-items:center;justify-content:center;height:250px;background-color:#fff;"
        >
          content of option8
        </div>
      </div>
      <div
        aria-hidden="true"
        class="am-tabs-tabpane am-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="am-tabs-tabpane am-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="am-tabs-tabpane am-tabs-tabpane-inactive"
        role="tabpanel"
      />
    </div>
  </div>
  <div
    class="am-whitespace am-whitespace-md"
  />
</div>
`;

exports[`renders ./components/tabs/demo/noanim.md correctly 1`] = `
<div>
  <div
    class="am-whitespace am-whitespace-md"
  />
  <div
    class="am-tabs am-tabs-top"
  >
    <div
      class="am-tabs-bar"
      role="tablist"
      tabindex="0"
    >
      <div
        class="am-tabs-ink-bar am-tabs-ink-bar-no-animated"
      />
      <div
        aria-disabled="false"
        aria-selected="false"
        class=" am-tabs-tab"
        role="tab"
      >
        First tab
      </div>
      <div
        aria-disabled="false"
        aria-selected="false"
        class=" am-tabs-tab"
        role="tab"
      >
        Second Tab
      </div>
      <div
        aria-disabled="false"
        aria-selected="true"
        class="am-tabs-tab-active am-tabs-tab"
        role="tab"
      >
        Third Tab
      </div>
    </div>
    <div
      class="am-tabs-content am-tabs-content-no-animated"
    >
      <div
        aria-hidden="true"
        class="am-tabs-tabpane am-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="am-tabs-tabpane am-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="false"
        class="am-tabs-tabpane am-tabs-tabpane-active"
        role="tabpanel"
      >
        <div
          style="display:flex;align-items:center;justify-content:center;height:250px;background-color:#fff;"
        >
          Content of Third Tab
        </div>
      </div>
    </div>
  </div>
  <div
    class="am-whitespace am-whitespace-md"
  />
</div>
`;
